PMD Code Review - GermplasmStudyBrowser and IBPMiddleware
git-svn-id: https://efficio.atlassian.net/svn/GCP/trunk/IBPMiddleware@272 4ebb2e00-0138-4608-bc6e-edf3948d4863