@@ -15,7 +15,6 @@ package org.generationcp.middleware.dao.test;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.generationcp.middleware.dao.GermplasmDAO;
 import org.generationcp.middleware.dao.NumericDataDAO;
 import org.generationcp.middleware.pojos.NumericRange;
 import org.generationcp.middleware.pojos.TraitCombinationFilter;
@@ -40,14 +39,15 @@ public class TestNumericDataDAO{
     @Test
     public void testGetObservationUnitIdsByTraitScaleMethodAndValueCombinations() throws Exception {
         NumericRange range = new NumericRange(new Double(2000), new Double(3000));
-        TraitCombinationFilter combination = new TraitCombinationFilter(new Integer(1003), new Integer(9), new Integer(30), range);
+        TraitCombinationFilter combination = new TraitCombinationFilter(Integer.valueOf(1003), Integer.valueOf(9), Integer.valueOf(30), range);
         List<TraitCombinationFilter> filters = new ArrayList<TraitCombinationFilter>();
         filters.add(combination);
 
         List<Integer> results = dao.getObservationUnitIdsByTraitScaleMethodAndValueCombinations(filters, 0, 10);
         System.out.println("RESULTS:");
-        for (Integer result : results)
+        for (Integer result : results){
             System.out.println(result);
+        }
     }
 
     @After
